backup/k8s/ingress/multiapp-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: multiapp-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-service
                port: 
                  number: 3000
          - pathType: Prefix
            path: /api/?(.*)
            backend:
              service:
                name: server-service
                port: 
                  number: 5000
